--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -112,9 +112,11 @@
 .post-type-archive-vehicle,
 .tax-vehicle_type,
 .tax-model,
-.tax-location {
+.tax-location,
+.tag {
 
 	.site-main {
+		align-content: flex-start;
 		display: flex;
 		flex-wrap: wrap;
 	}
@@ -148,7 +150,8 @@
 
 // Other Vehicle Taxonomy Archives
 .tax-model .card,
-.tax-location .card {
+.tax-location .card,
+.tag .card {
 	margin-right: $padding;
 	width: calc(50% - #{($padding)});
 
